feat(config): add .env-driven configuration and the Java 17 Arrow flag
Running the study meant typing credentials into run.R's CONFIG block, and on
Java 17+ the Snowflake JDBC driver failed before any query ran.

* `R/env_config.R`: `configureFromEnv()` builds `connectionDetails` and
  `settings` from a `.env` file, returning exactly what the CONFIG block builds
  by hand. Deliberately ignores `OSM_COHORT_TABLE` and pins the study's own
  `bc_*` table names — a .env written for OncoStudyModules points at that
  study's cohort table in the same work schema, and honouring it would make
  this study generate its cohorts over the top of it.

* `setJavaOptions()` plus `options(java.parameters = "--add-opens=...")` at the
  top of all three runners. Snowflake's driver bundles Apache Arrow, which
  throws "Failed to initialize MemoryUtil" on Java 17+ unless java.nio is
  opened. The JVM reads the option once at startup, so it has to precede the
  first DatabaseConnector load.

* `.env.example` to copy, and a README "Running it yourself" section covering
  both entry points, which steps write to the database, and both caveats.